interpreter/tests/golden-files/pipeline.golden.enzo
//= function atoms and pipes
6
11
12
16
20
15
20
30
10
100
5
50
20
10
12

//= Multiline function atom
10
15
20
30
40

//= PIPELINE ERROR: SHADOWING $this IS DISALLOWED
error: cannot declare variable '$this'
	$this: 7;
//= PIPELINE NEGATIVE NUMBER HANDLING
-10
-15

//= PIPELINE WITH TEXT INTERPOLATION
"Hello, World!"

//= PIPELINE WITH INTERPOLATION AND MATH
"double of 5 is 10"

//= PIPELINE WITH LIST MANIPULATION
2

//= PIPELINE NESTED LIST ACCESS
30

//= PIPELINE LIST PROPERTY
15
15

//= PIPELINE ERROR NO FUNCTION ATOM
error: pipeline expects function atom after `then`
	5 then 10; // error: pipeline expects function atom after `then`

//= PIPELINE ERROR EMPTY FUNCTION ATOM
//= Complex tests
24
25
25

//= Multi-line and params in named functions
12
15

//= NAMED FUNCTION: referencing $this is an error
error: can't use reserved $this keyname in named function declaration
	breaking2: (